  - Voodoo
    - Voodoo1 emulation speedup with combined PCI / memory FIFO implementation
      and multi-threading support (separate FIFO thread).
    - Voodoo2 model now working after some fixes and implementation of the
      CMDFIFO (using FIFO thread) and one of the bitBLT functions.
    - Added Voodoo Banshee emulation support (still under construction).
  - USB
    - Now creating separate plugins for each USB device implementation.
  - Networking
    - bxhub: Added DNS service support for the server "vnet" and connected
      clients.

  - GUI and display libraries
    - Added new win32 gui option "traphotkeys" for fullscreen mode.
    - wx: Fixes and updates for wxWidgets 3.0 support.
    - Removed legacy guis "macos" and "svga" from display library auto-
      detection (still available using --with-XXX option).

-------------------------------------------------------------------------
Changes in 2.6.9 (April 9, 2017):

Brief summary :
  - CPU: implemented new instructions and x86 architecture extensions.
  - Bugfixes for CPU emulation correctness.
  - Added Android host platform support.
  - Added USB EHCI device emulation support.
  - Added USB floppy (UFI/CBI) support.
  - Added ethernet module 'socket', designed to interconnect Bochs instances.
  - Show textconfig at runtime in the Bochs VGA window (gui console).

Detailed change log :

- General
  - Added new log action "warn", designed to show a message box on error events.
  - Show message box before exit if log action is set to "fatal".
  - Added macro BX_FATAL for all cases when continuing is not recommended, since
    it can cause an application crash or incorrect simulation behaviour.

- Configure and compile
  - Added Android host platform support.
  - Configure script now prints warnings for features not maintained yet.

- GUI and display libraries
  - Show the runtime configuration in the Bochs VGA window (gui console) instead
    of console / xterm (rfb, sdl, sdl2, vncsrv and X11 guis).